[gd_scene load_steps=63 format=3 uid="uid://bfy613fyep275"]

[ext_resource type="Script" uid="uid://d2k0xnav5hgsu" path="res://src/script/Player/player.gd" id="1_20sa5"]
[ext_resource type="PackedScene" uid="uid://cdgt5st828ivl" path="res://src/assets/player/character.glb" id="1_pcs3v"]
[ext_resource type="Script" uid="uid://ccp3dlwfvpxjl" path="res://src/script/Player/camera_spring_arm.gd" id="2_54qh1"]
[ext_resource type="Resource" uid="uid://d2xdflmd3t37y" path="res://src/script/Player/MovementStates/idle.tres" id="2_yekmg"]
[ext_resource type="Resource" uid="uid://b3r524eoprfpb" path="res://src/script/Player/MovementStates/walk.tres" id="3_lsj4e"]
[ext_resource type="Script" uid="uid://b7uylt40t07b7" path="res://src/script/Player/camera_follow.gd" id="3_oyhgt"]
[ext_resource type="Resource" uid="uid://7owpwj4tbs71" path="res://src/script/Player/MovementStates/run.tres" id="4_60fxj"]
[ext_resource type="Resource" uid="uid://bp71ok7orr65t" path="res://src/script/Player/MovementStates/idle_aim.tres" id="5_27oxh"]
[ext_resource type="PackedScene" uid="uid://ba0fty2lh1iji" path="res://src/scenes/Player/spacegun.tscn" id="6_hmrkw"]
[ext_resource type="Resource" uid="uid://51ah0tcyd8uy" path="res://src/script/Player/MovementStates/walk_aim.tres" id="6_lfkm4"]
[ext_resource type="Script" uid="uid://bj248auk6f5sg" path="res://src/script/Player/movement_controller.gd" id="8_lsj4e"]
[ext_resource type="Script" uid="uid://comn1yh4sxpv0" path="res://src/script/Player/animation_controller.gd" id="9_60fxj"]
[ext_resource type="AudioStream" uid="uid://cfcy3k7tudnri" path="res://src/assets/sounds/step_left.wav" id="13_bdndk"]
[ext_resource type="AudioStream" uid="uid://bqdcqqu503waf" path="res://src/assets/sounds/step_right.wav" id="14_4xb22"]
[ext_resource type="AudioStream" uid="uid://en0yn34vyh1e" path="res://src/assets/sounds/metal_step_1.wav" id="15_kmnan"]
[ext_resource type="AudioStream" uid="uid://bk8bsjof0ak0x" path="res://src/assets/sounds/metal_step_2.wav" id="16_1dx4a"]
[ext_resource type="AudioStream" uid="uid://dc4r0jj3lb71m" path="res://src/assets/sounds/metal_step_3.wav" id="17_uxs7y"]
[ext_resource type="AudioStream" uid="uid://cdli76fce18lr" path="res://src/assets/sounds/damage_1.mp3" id="18_d4og5"]
[ext_resource type="AudioStream" uid="uid://cgdou6goexyr2" path="res://src/assets/sounds/damage_2.mp3" id="19_7o84m"]
[ext_resource type="AudioStream" uid="uid://53npec1y0hcl" path="res://src/assets/sounds/damage_3.mp3" id="20_840o6"]
[ext_resource type="Script" uid="uid://cydlbtndjn7ik" path="res://src/script/Screens/pause_menu.gd" id="21_6j6nx"]
[ext_resource type="FontFile" uid="uid://blase4ea6ciwk" path="res://src/assets/fonts/VCR_OSD_MONO_1.001.ttf" id="21_32s32"]
[ext_resource type="Shader" uid="uid://dct1g77yeoicx" path="res://src/Shaders/vhs.gdshader" id="21_840o6"]
[ext_resource type="Texture2D" uid="uid://gf533nqrvuok" path="res://src/Shaders/rgba-noise-medium.png" id="22_32s32"]
[ext_resource type="AudioStream" uid="uid://dnek04hr8potb" path="res://src/assets/sounds/pause_sound.mp3" id="25_1u27r"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3nbsf"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ppgf4"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kyr45"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vjskg"]
animation = &"walk_pointing"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_aeqer"]
animation = &"idle_pointing"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_v3w2s"]
blend_point_0/node = SubResource("AnimationNodeAnimation_3nbsf")
blend_point_0/pos = Vector2(0, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_ppgf4")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_kyr45")
blend_point_2/pos = Vector2(2, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_vjskg")
blend_point_3/pos = Vector2(1, 1)
blend_point_4/node = SubResource("AnimationNodeAnimation_aeqer")
blend_point_4/pos = Vector2(0, 1)
min_space = Vector2(0, 0)
max_space = Vector2(2, 1)
snap = Vector2(1, 1)

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_t8ovq"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_meeks"]
graph_offset = Vector2(-57.9064, 67.3003)
nodes/BlendSpace2D/node = SubResource("AnimationNodeBlendSpace2D_v3w2s")
nodes/BlendSpace2D/position = Vector2(106.667, 106.667)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_t8ovq")
nodes/TimeScale/position = Vector2(373.333, 80)
nodes/output/position = Vector2(533.333, 106.667)
node_connections = [&"TimeScale", 0, &"BlendSpace2D", &"output", 0, &"TimeScale"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_nhyte"]
radius = 0.429686
height = 1.99176

[sub_resource type="SphereShape3D" id="SphereShape3D_oyhgt"]
radius = 0.3

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_fp6hg"]
streams_count = 2
stream_0/stream = ExtResource("13_bdndk")
stream_1/stream = ExtResource("14_4xb22")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_d4og5"]
streams_count = 3
stream_0/stream = ExtResource("15_kmnan")
stream_1/stream = ExtResource("16_1dx4a")
stream_2/stream = ExtResource("17_uxs7y")

[sub_resource type="Animation" id="Animation_7o84m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.109804)]
}

[sub_resource type="Animation" id="Animation_d4og5"]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.109804), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_840o6"]
_data = {
&"RESET": SubResource("Animation_7o84m"),
&"hit": SubResource("Animation_d4og5")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_32s32"]
streams_count = 3
stream_0/stream = ExtResource("18_d4og5")
stream_1/stream = ExtResource("19_7o84m")
stream_2/stream = ExtResource("20_840o6")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_00btm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y74mt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ju41b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3vqu6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1u27r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_101pk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6j6nx"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bturo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_geffu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_35sii"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6j6nx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_of6kf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yge2c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jggo8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jk4xf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wk8aw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ticfu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_skuiq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qs558"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4dpy4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6j6nx"]
shader = ExtResource("21_840o6")
shader_parameter/vhs_resolution = Vector2(320, 240)
shader_parameter/samples = 2
shader_parameter/crease_noise = 1.0
shader_parameter/crease_opacity = 0.5
shader_parameter/filter_intensity = 0.7
shader_parameter/tape_crease_smear = 0.2
shader_parameter/tape_crease_intensity = 0.3
shader_parameter/tape_crease_jitter = 0.27
shader_parameter/tape_crease_speed = -1.3
shader_parameter/tape_crease_discoloration = 1.6
shader_parameter/bottom_border_thickness = 6.0
shader_parameter/bottom_border_jitter = 6.0
shader_parameter/noise_intensity = 0.4
shader_parameter/noise_texture = ExtResource("22_32s32")

[node name="PlayerDefault" type="CharacterBody3D"]
script = ExtResource("1_20sa5")
movement_states = {
"idle": ExtResource("2_yekmg"),
"idle_aim": ExtResource("5_27oxh"),
"run": ExtResource("4_60fxj"),
"walk": ExtResource("3_lsj4e"),
"walk_aim": ExtResource("6_lfkm4")
}

[node name="CharacterSkin" parent="." instance=ExtResource("1_pcs3v")]
unique_name_in_owner = true
transform = Transform3D(-0.22, 0, -1.9233e-08, 0, 0.22, 0, 1.9233e-08, 0, -0.22, 0.0345966, 1.19209e-07, -0.0794733)

[node name="SpotLight3D" type="SpotLight3D" parent="CharacterSkin/Armature" index="0"]
transform = Transform3D(4.55443, 5.4366e-08, 0.354762, -0.0482941, 4.5257, 0.619997, -0.35146, -0.621875, 4.51203, -0.177552, 5.45442, 0.0521112)
spot_range = 9.48
spot_attenuation = -0.84
spot_angle = 35.77

[node name="Skeleton3D" parent="CharacterSkin/Armature" index="1"]
bones/0/position = Vector3(0.00428301, 0.0824512, 0.863125)
bones/0/rotation = Quaternion(-0.00438519, 0.712574, 0.701559, 0.00589719)
bones/1/position = Vector3(0.906068, -0.936087, 6.97051)
bones/1/rotation = Quaternion(-0.699542, -0.0993381, -0.0642039, 0.704734)
bones/2/rotation = Quaternion(-0.090041, 0.0123577, 0.0901872, 0.991769)
bones/4/rotation = Quaternion(0.205441, -0.29593, 0.821809, -0.441416)
bones/5/rotation = Quaternion(-0.346063, -0.276586, 0.0710036, 0.8937)
bones/6/rotation = Quaternion(0.0550551, 0.0160815, 0.151409, 0.986806)
bones/9/position = Vector3(-0.884174, -0.958323, 6.9707)
bones/9/rotation = Quaternion(-0.655428, 0.0887216, 0.0772016, 0.746044)
bones/10/rotation = Quaternion(-0.0578138, -0.0165578, -0.112748, 0.991802)
bones/13/rotation = Quaternion(-0.348407, 0.273674, -0.0756145, 0.893307)
bones/14/rotation = Quaternion(0.0556945, -0.0144107, -0.140389, 0.988424)
bones/17/rotation = Quaternion(-0.00408474, 0.694198, 0.719759, -0.00450945)
bones/19/rotation = Quaternion(-0.266851, -0.0032915, 0.0147265, 0.96362)

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="CharacterSkin/Armature/Skeleton3D" index="1"]
transform = Transform3D(-0.995784, -0.0872277, -0.0283773, 0.0914135, -0.96927, -0.228382, -0.00758405, -0.230013, 0.973158, 1.22992, 4.79862, 0.0362597)
bone_name = "Bone.005.L"
bone_idx = 11

[node name="SpaceGun" parent="CharacterSkin/Armature/Skeleton3D/BoneAttachment3D" instance=ExtResource("6_hmrkw")]
transform = Transform3D(-0.229638, -0.00674221, 0.0494572, -0.0499105, 0.0279761, -0.227928, 0.000651551, -0.233231, -0.0287697, 0.228993, 0.251174, -0.449286)

[node name="SciFi_gun_smg_006_Material_001_0" parent="CharacterSkin/Armature/Skeleton3D/BoneAttachment3D/SpaceGun" index="0"]
transform = Transform3D(-0.998921, 0.0464441, 3.63798e-09, -4.65661e-10, -4.47035e-08, 1, 0.0464441, 0.998921, 4.09782e-08, 0, 0, -0.0671472)

[node name="RayCast3D" parent="CharacterSkin/Armature/Skeleton3D/BoneAttachment3D/SpaceGun" index="2"]
transform = Transform3D(-0.966766, -0.158275, 0.200782, -0.162756, 0.986649, -0.00589986, -0.197168, -0.0383822, -0.979618, -0.00829673, 0.755959, -4.8367)

[node name="AnimationTree" type="AnimationTree" parent="CharacterSkin"]
tree_root = SubResource("AnimationNodeBlendTree_meeks")
anim_player = NodePath("../AnimationPlayer")
parameters/BlendSpace2D/blend_position = Vector2(-0.00262812, 0.0186567)
parameters/TimeScale/scale = 1.01643

[node name="PlayerCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.966495, -0.0528408)
shape = SubResource("CapsuleShape3D_nhyte")

[node name="SpringArmPivot" type="Node3D" parent="." node_paths=PackedStringArray("camera")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.755, 0.340011)
script = ExtResource("2_54qh1")
camera = NodePath("Camera")
mouse_sensibility = 0.001

[node name="SpringArm3D" type="SpringArm3D" parent="SpringArmPivot"]
shape = SubResource("SphereShape3D_oyhgt")
spring_length = 3.0

[node name="SpringPosition" type="Node3D" parent="SpringArmPivot/SpringArm3D"]

[node name="Camera" type="Camera3D" parent="SpringArmPivot" node_paths=PackedStringArray("spring_arm")]
script = ExtResource("3_oyhgt")
spring_arm = NodePath("../SpringArm3D/SpringPosition")
lerp_power = 6.0

[node name="MovementController" type="Node" parent="." node_paths=PackedStringArray("player", "mesh_root", "camera")]
script = ExtResource("8_lsj4e")
player = NodePath("..")
mesh_root = NodePath("../CharacterSkin/Armature")
camera = NodePath("../SpringArmPivot")

[node name="AnimationController" type="Node" parent="." node_paths=PackedStringArray("animation_tree", "player")]
script = ExtResource("9_60fxj")
animation_tree = NodePath("../CharacterSkin/AnimationTree")
player = NodePath("..")

[node name="Sounds" type="Node3D" parent="."]

[node name="GrassSteps" type="AudioStreamPlayer3D" parent="Sounds"]
stream = SubResource("AudioStreamRandomizer_fp6hg")
volume_db = 14.546

[node name="MetalSteps" type="AudioStreamPlayer3D" parent="Sounds"]
stream = SubResource("AudioStreamRandomizer_d4og5")
volume_db = -6.612

[node name="FloorTypeRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.312091, -0.049876)
collision_mask = 2

[node name="Damage" type="ColorRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.109804)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.337761, 0.0729677, 0.0223881, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Damage"]
libraries = {
&"": SubResource("AnimationLibrary_840o6")
}

[node name="DamageSounds" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_32s32")

[node name="PauseMenu" type="CanvasLayer" parent="."]
process_mode = 3
visible = false
script = ExtResource("21_6j6nx")

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
modulate = Color(1, 1, 1, 0.658824)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.209908, 0.209908, 0.209908, 1)

[node name="Title" type="Label" parent="PauseMenu"]
anchors_preset = -1
anchor_left = 0.264757
anchor_top = 0.117284
anchor_right = 0.735243
anchor_bottom = 0.214506
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("21_32s32")
theme_override_font_sizes/font_size = 71
text = "_ PAUSE MENU _"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Continue" type="Button" parent="PauseMenu"]
anchors_preset = -1
anchor_left = 0.0711806
anchor_top = 0.472222
anchor_right = 0.338542
anchor_bottom = 0.580247
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("21_32s32")
theme_override_font_sizes/font_size = 42
theme_override_styles/focus = SubResource("StyleBoxEmpty_00btm")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_y74mt")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ju41b")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_3vqu6")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_1u27r")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_101pk")
theme_override_styles/hover = SubResource("StyleBoxFlat_6j6nx")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_bturo")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_geffu")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_35sii")
theme_override_styles/normal = SubResource("StyleBoxEmpty_6j6nx")
text = "Continuar"
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="Exit" type="Button" parent="PauseMenu"]
anchors_preset = -1
anchor_left = 0.0711806
anchor_top = 0.631173
anchor_right = 0.338542
anchor_bottom = 0.739198
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("21_32s32")
theme_override_font_sizes/font_size = 42
theme_override_styles/focus = SubResource("StyleBoxEmpty_of6kf")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_yge2c")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_jggo8")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_jk4xf")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_wk8aw")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_ticfu")
theme_override_styles/hover = SubResource("StyleBoxFlat_6j6nx")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_skuiq")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_qs558")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_4dpy4")
theme_override_styles/normal = SubResource("StyleBoxEmpty_6j6nx")
text = "Salir"
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="VHS" type="CanvasLayer" parent="PauseMenu"]
visible = false

[node name="ColorRect" type="ColorRect" parent="PauseMenu/VHS"]
material = SubResource("ShaderMaterial_6j6nx")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PauseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("25_1u27r")
volume_db = -9.125

[connection signal="set_movement_direction" from="." to="MovementController" method="_on_set_movement_direction"]
[connection signal="set_movement_state" from="." to="SpringArmPivot" method="_on_player_set_movement_state"]
[connection signal="set_movement_state" from="." to="MovementController" method="_on_set_movement_state"]
[connection signal="set_movement_state" from="." to="AnimationController" method="_on_player_set_movement_state"]
[connection signal="pressed" from="PauseMenu/Continue" to="PauseMenu" method="_on_continue_pressed"]
[connection signal="pressed" from="PauseMenu/Exit" to="PauseMenu" method="_on_exit_pressed"]

[editable path="CharacterSkin"]
[editable path="CharacterSkin/Armature/Skeleton3D/BoneAttachment3D/SpaceGun"]
